# WebSRT

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  gwplan.md  install-prereqs.sh  plan.md  websrt.conf
certs/: README.md
crates/gateway/: Cargo.toml
crates/gateway/src/: broadcaster.rs  main.rs  server.rs  session.rs  srt_sender.rs
crates/gateway/src/ingest/: srt.rs
crates/gateway/tests/: timebase_drift.rs
crates/mpeg2ts-wasm/: Cargo.toml
crates/mpeg2ts-wasm/src/: lib.rs  nal.rs
crates/srt-wasm/: Cargo.toml
crates/srt-wasm/src/: lib.rs
crates/ts-muxer-wasm/: Cargo.toml
crates/ts-muxer-wasm/src/: lib.rs
crates/websrt/: Cargo.toml
crates/websrt-gateway/: Cargo.toml
crates/websrt-gateway/src/: main.rs
crates/websrt-gateway/tests/: broadcaster.rs  timebase_drift.rs
crates/websrt/src/: broadcaster.rs  cert.rs  gateway.rs  hooks.rs  lib.rs  limits.rs  registry.rs  session.rs  srt_sender.rs  stream_registry.rs
crates/websrt/src/ingest/: channel.rs  continuity.rs  file.rs  mod.rs  srt.rs
crates/websrt/tests/: e2e.rs  patch_regression.rs  skip_induction.rs
fixtures/: make-fixture.sh  stream.sh  test.ts
web/: advanced.html  index.html  package-lock.json  package.json  simple.html  smoke.mjs  stream.html  tsconfig.json  vite.config.ts
web/src/: advanced.tsx  decode.ts  demux.ts  main.ts  render.ts  srt.ts  stream-worker.ts  stream.tsx  wasm.d.ts  worker.ts
web/src/debug/: diagnostics.ts  gpu-info.ts  media-capabilities.ts  sampler.ts  store.ts  types.ts
web/src/debug/components/: CodecTab.tsx  ConsoleTab.tsx  DemuxTab.tsx  DevToolsTab.tsx  GpuTab.tsx  PacketTimeline.tsx  Panel.tsx  SrtTab.tsx  StreamTab.tsx  TestTab.tsx  packetUtils.ts  streamTypes.ts
web/src/debug/components/charts/: BitrateChart.tsx  CcHeatmap.tsx  FrameTimeline.tsx  LossCorrelationChart.tsx  LossHeatmap.tsx  NalStackedBar.tsx  PcrChart.tsx  PidDonutChart.tsx  PtsJumpSparkline.tsx  QueueSparkline.tsx  RaTimeline.tsx  TimeSeriesChart.tsx
web/src/shared/: av1.ts  pmt.ts  viewer.ts
