[package]
name = "srt-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
srt-protocol.workspace = true
wasm-bindgen = "0.2"
web-time = "1.0"
bytes.workspace = true
console_error_panic_hook = "0.1"

# Pull getrandom's js feature in for wasm32 so `rand` (used by srt-protocol)
# can sample randomness from the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
