[package]
name = "websrt"
version.workspace = true
edition.workspace = true
description = "SRT-over-WebTransport gateway library"
license = "MPL-2.0"

[lib]
crate-type = ["rlib"]

[features]
default = []
sim-loss = ["dep:rand"]

[dependencies]
bytes.workspace = true
tracing.workspace = true
tokio.workspace = true
srt-protocol.workspace = true
srt-tokio.workspace = true
subtle.workspace = true
wtransport.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
rand = { workspace = true, optional = true }
percent-encoding.workspace = true
parking_lot.workspace = true

[dev-dependencies]
proptest = "1"
# Required so integration tests can exercise the forked srt-protocol internals
# directly (it is only a transitive dependency of websrt).
srt-protocol.workspace = true
